Fixes Ad Spcae padding on mobile

--- a/curling-main/sass/modules/blocks/_block-page-intro.scss
+++ b/curling-main/sass/modules/blocks/_block-page-intro.scss
@@ -67,7 +67,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: auto 0;
+    margin: 0;
     max-width: 300px;
 
     @include responsive-max($responsive-tablet) {
